added css and javascript

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <html>
   <header>
-    <title>My neat webpage</title>
-    <style>
-      h1 {
-        color: #836;
-      }
-    </style>
+    <title>Digital Clock</title>
   </header>
-  <body>
-    <h1>Somebody toucha ma spaghett!!!</h1>
-    <p>
-      REEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
-      </p>
+
+    <head>
+      <script src = "myjavascript.js"></script>
+    </head>
+
+  <body onload="startTime()">
+    <h1>Tick Tock</h1>
+    <div id="txt"></div>
   </body>
 </html>
