Digital alarm clock version 1 finished and added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <head>
       <script src = "myjavascript.js"></script>
+      <link rel="stylesheet" type="text/css" href="main.css">
     </head>
 
   <body onload="startTime()">
